--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Graphics town framework code by Mike Gleicher
+  -- written October, 2015
+  -->
 <head>
     <meta charset="UTF-8">
     <title>Graphics Town - Benjamin Charles</title>
